map rendered with search bar

--- a/client/src/components/marker.css
+++ b/client/src/components/marker.css
@@ -1,4 +1,4 @@
-.marker {
+/* .marker {
     width:0;
     height:0;
   }
@@ -26,4 +26,4 @@
   
   .temporary-marker span {
     background: #D3D3D3;
-  }
+  } */
