--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,6 +59,11 @@ p {
   font-size: 80px;
 }
 
+.mapboxgl-popup {
+  max-width: 400px;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  }
+
 
   
   
